WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38508
[chromium] WebViewClient should have a notification when a new node gets the focus
https://bugs.webkit.org/show_bug.cgi?id=38508
Summary
[chromium] WebViewClient should have a notification when a new node gets the ...
Jay Civelli
Reported
2010-05-03 23:16:42 PDT
Right now the ChromeClient focus method is called every time a new node gets the focus, without specifying which node got focused. We should have a notification on the WebViewClient when a node gets focus, which specify that node.
Attachments
Adding a notification on WebViewClient for focus change events.
(2.04 KB, patch)
2010-05-03 23:22 PDT
,
Jay Civelli
fishd
: review-
Details
Formatted Diff
Diff
Applying fishd's comments
(1.94 KB, patch)
2010-05-06 17:09 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.11 KB, patch)
2010-05-15 00:01 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2010-05-03 23:22:57 PDT
Created
attachment 54998
[details]
Adding a notification on WebViewClient for focus change events.
Darin Fisher (:fishd, Google)
Comment 2
2010-05-06 11:36:39 PDT
Comment on
attachment 54998
[details]
Adding a notification on WebViewClient for focus change events. WebKit/chromium/public/WebViewClient.h:106 + virtual void focusNodeChanged(const WebNode&) { } How about moving this down near the other focus related methods? (In the UI section.) WebKit/chromium/src/ChromeClientImpl.cpp:218 + m_webView->client()->focusNodeChanged(WebNode(node)); focusedNodeChanged seems like a better name for this method.
Jay Civelli
Comment 3
2010-05-06 17:09:57 PDT
Created
attachment 55322
[details]
Applying fishd's comments
WebKit Commit Bot
Comment 4
2010-05-08 13:35:30 PDT
Comment on
attachment 55322
[details]
Applying fishd's comments Rejecting patch 55322 from commit-queue. Unexpected failure when landing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--test', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 55322, '--parent-command=commit-queue', '--no-update']" exit_code: 1 Logging in as
eseidel@chromium.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=55322&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=38508
&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 55322 from
bug 38508
. ERROR: /Users/eseidel/Projects/CommitQueue/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Adam Barth
Comment 5
2010-05-15 00:01:43 PDT
Created
attachment 56143
[details]
Patch for landing
Adam Barth
Comment 6
2010-05-15 00:02:48 PDT
In the future, please do not remove the Reviewed by NOBODY line from the ChangeLog. It is used by the automated tools to fill in the reviewer properly.
WebKit Commit Bot
Comment 7
2010-05-15 10:34:47 PDT
Comment on
attachment 56143
[details]
Patch for landing Clearing flags on attachment: 56143 Committed
r59543
: <
http://trac.webkit.org/changeset/59543
>
WebKit Commit Bot
Comment 8
2010-05-15 10:34:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug