2010-05-15  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Adding a notification on WebViewClient when a new
        node gets focused.
        https://bugs.webkit.org/show_bug.cgi?id=38508

        * public/WebViewClient.h:
        (WebKit::WebViewClient::focusedNodeChanged):
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::focusedNodeChanged):

Canonical link: https://commits.webkit.org/50683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59543 268f45cc-cd09-0410-ab3c-d52691b4dbfc